# DSGO

./: .gitignore  CMakeLists.txt  DSGO.zipp  README.md  run.bat
22125070/source/include/: AVLGraph.h  AVLNode.h  AVLStage.h  BTreeGraph.h  BTreeGroup.h  BTreeNode.h  BTreeStage.h  BackButton.h  CodeBox.h  CodeVisualizer.h  Color.h  GraphStage.h  HashTable.h  HeapStage.h  IngameSettings.h  MyShape.h  ReadFromFile.h  Scrubber.h  SlideBar.h  Stage.h  TriangleButton.h  TrieNode.h  TypingBox.h
22125070/source/src/: AVLStage.cpp  BTreeGroup.cpp  BTreeNode.cpp  Box.cpp  CodeVisualizer.cpp  Color.cpp  Game.cpp  GeneralEdge.cpp  GeneralGraph.cpp  GeneralNode.cpp  GraphMatrixInput.cpp  GraphStage.cpp  HashTable.cpp  HeapGraph.cpp  HeapStage.cpp  MediaControl.cpp  MultipleChoice.cpp  MyShape.cpp  ReadFromFile.cpp  Scrubber.cpp  TrieNode.cpp  TypingBox.cpp  main.cpp
include/: AVLGraph.h  AVLNode.h  AVLStage.h  BTreeGraph.h  BTreeGroup.h  Box.h  CodeBox.h  CodeVisualizer.h  Color.h  DSU.h  EdgeInfo.h  Game.h  GeneralEdge.h  GeneralGraph.h  GeneralNode.h  GraphInfo.h  GraphMatrixInput.h  GraphStage.h  HashCell.h  HashTable.h  HashTableStage.h  HeapGraph.h  HeapStage.h  IngameSettings.h  MediaControl.h  MultipleChoice.h  NodeInfo.h  PlayButton.h  ReadFromFile.h  SlideBar.h  Stage.h  Switch.h  Template.h  TrieGraph.h  TrieNode.h  TrieStage.h  TypingBox.h
sample/: AVL.txt  BTree.txt  HashTable.txt  Trie.txt  input.txt
src/: AVLGraph.cpp  AVLNode.cpp  AVLStage.cpp  BTreeGraph.cpp  BTreeGroup.cpp  BTreeNode.cpp  BTreeStage.cpp  BackButton.cpp  Box.cpp  CodeBox.cpp  CodeVisualizer.cpp  Color.cpp  DSU.cpp  EdgeInfo.cpp  Game.cpp  GeneralEdge.cpp  GeneralGraph.cpp  GeneralNode.cpp  GraphInfo.cpp  GraphMatrixInput.cpp  GraphStage.cpp  HashCell.cpp  HashTable.cpp  HashTableStage.cpp  HeapGraph.cpp  HeapStage.cpp  IngameSettings.cpp  MediaControl.cpp  MultipleChoice.cpp  NodeInfo.cpp  PlayButton.cpp  ReadFromFile.cpp  Scrubber.cpp  SlideBar.cpp  Stage.cpp  Switch.cpp  Template.cpp  TriangleButton.cpp  TrieGraph.cpp  TrieNode.cpp  (+2 more)
